[package]
name = "oxcart"
version = "0.1.0"
authors = ["Jack McPherson <jmcph4@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "arraylist_insert_head"
harness = false

[[bench]]
name = "vector_insert_front"
harness = false

